<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/scrollviewdata" >
<LinearLayout android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:id="@+id/linearlayoutdata" >        
        <RadioGroup android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/radiogroup_data">
		    <RadioButton android:layout_width="match_parent" android:layout_height="wrap_content" android:checked="true" android:drawableLeft="@drawable/bl" android:text="@string/bl" android:id="@+id/data_bl" />
		    <RadioButton android:layout_width="match_parent" android:layout_height="wrap_content" android:drawableLeft="@drawable/br" android:text="@string/br" android:id="@+id/data_br" />
	        <RadioButton android:layout_width="match_parent" android:layout_height="wrap_content" android:drawableLeft="@drawable/hooolmdata" android:text="@string/hooolm" android:id="@+id/data_hooolm" />
		    <RadioButton android:layout_width="match_parent" android:layout_height="wrap_content" android:drawableLeft="@drawable/tl" android:text="@string/tl" android:id="@+id/data_tl" />
		    <RadioButton android:layout_width="match_parent" android:layout_height="wrap_content" android:drawableLeft="@drawable/tr" android:text="@string/tr" android:id="@+id/data_tr" />
			</RadioGroup>
		<TextView android:gravity="center_horizontal" android:paddingTop="15dip" android:paddingBottom="5dip" android:layout_width="match_parent" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="#aa33b5e5" android:text="@string/ready" android:id="@+id/ready" />
	    <Button android:layout_width="200dip" android:layout_height="wrap_content" android:padding="10dip" android:background="@drawable/button" android:text="@string/choose" android:id="@+id/data_choose"/>
    	<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="100dip" >
	    	<Button android:layout_width="200dip" android:layout_height="40dip" android:padding="10dip" android:background="@drawable/button" android:text="@string/get_data" android:id="@+id/get_data"/>
		</LinearLayout>
    </LinearLayout>
</ScrollView>