<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/scrollviewwifi" >
	<LinearLayout android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:id="@+id/linearlayoutwifi" >
		<RadioGroup android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/radiogroup_wifi">			<RadioButton android:layout_width="match_parent" android:layout_height="wrap_content" android:drawableLeft="@drawable/hooolm_wifi" android:text="@string/hooolm" android:id="@+id/wifi_hooolm" />
			<RadioButton android:layout_width="match_parent" android:layout_height="wrap_content" android:drawableLeft="@drawable/round_wifi" android:text="@string/round" android:id="@+id/wifi_round" />
			<RadioButton android:layout_width="match_parent" android:layout_height="wrap_content" android:drawableLeft="@drawable/original_wifi" android:text="@string/original" android:id="@+id/wifi_stock" />
	        <RadioButton android:layout_width="match_parent" android:layout_height="wrap_content" android:checked="true" android:drawableLeft="@drawable/xoom_wifi" android:text="@string/xoom" android:id="@+id/wifi_xoom" />
		</RadioGroup>
		<TextView android:gravity="center_horizontal" android:paddingTop="15dip" android:paddingBottom="5dip" android:layout_width="match_parent" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="#aa33b5e5" android:text="@string/ready" android:id="@+id/ready" />
	    <Button android:layout_width="200dip" android:layout_height="wrap_content" android:padding="10dip" android:background="@drawable/button" android:text="@string/choose" android:id="@id/wifi_choose"/>
		<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="100dip" >
	    	<Button android:layout_width="200dip" android:layout_height="40dip" android:padding="10dip" android:background="@drawable/button" android:text="@string/get_wifi" android:id="@+id/get_wifi"/>
		</LinearLayout>
		</LinearLayout>
</ScrollView>