<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
    	android:key="status_bar"
    	android:title="@string/stat_bar">
    	<Preference 
    	    android:key="battery"
    	    android:title="@string/battery_title">
    	    <Intent
	    	    android:action="android.intent.action.MAIN"
    		    android:targetClass="com.masturmods.settings.activities.BatteryChooser"
    		    android:targetPackage="com.masturmods.settings"/>
    	</Preference>
    	<Preference
    	    android:key="data"
    	    android:title="@string/data_title">
    	    <Intent
    	        android:action="android.intent.action.MAIN"
    	        android:targetClass="com.masturmods.settings.activities.DataChooser"
    	        android:targetPackage="com.masturmods.settings" />
    	</Preference>
    	<Preference
    	    android:key="signal"
    	    android:title="@string/signal_title">
    	    <Intent
    	        android:action="android.intent.action.MAIN"
    	        android:targetClass="com.masturmods.settings.activities.SignalChooser"
    	        android:targetPackage="com.masturmods.settings" />
    	</Preference>
		<Preference
		    android:key="wifi"
		    android:title="@string/wifi_title">
		    <Intent
		        android:action="android.intent.action.MAIN"
		        android:targetClass="com.masturmods.settings.activities.WifiChooser"
		        android:targetPackage="com.masturmods.settings" />
		</Preference>
	</PreferenceCategory>
	<PreferenceCategory
	    android:key="nav_bar"
    	android:title="@string/nav_bar">
	    <Preference 
    	    android:key="back"
    	    android:title="@string/back_title">
	    	<Intent
    	        android:action="android.intent.action.MAIN"
    	        android:targetClass="com.masturmods.settings.activities.BackChooser"
    	        android:targetPackage="com.masturmods.settings" />
    	</Preference>
    	<Preference
    	    android:key="home"
    	    android:title="@string/home_title">
    	    <Intent
    	        android:action="android.intent.action.MAIN"
    	        android:targetClass="com.masturmods.settings.activities.HomeChooser"
    	        android:targetPackage="com.masturmods.settings" />
        </Preference>
    	<Preference
    	    android:key="menu"
    	    android:title="@string/menu_title" >
    	    <Intent
    	        android:action="android.intent.action.MAIN"
    	        android:targetClass="com.masturmods.settings.activities.MenuChooser"
    	        android:targetPackage="com.masturmods.settings" />
    	</Preference>
    	<Preference
    	    android:key="recent"
    	    android:title="recent_title" >
    	    <Intent
    	        android:action="android.intent.action.MAIN"
    	        android:targetClass="com.masturmods.settings.activities.RecentChooser"
    	        android:targetPackage="com.masturmods.settings" />
    	</Preference>
    	<Preference
    	    android:key="search"
    	    android:title="search_title" >
    	    <Intent
    	        android:action="android.intent.action.MAIN"
    	        android:targetClass="com.masturmods.settings.activities.SearchChooser"
    	        android:targetPackage="com.masturmods.settings" />
    	</Preference>
    </PreferenceCategory>
</PreferenceScreen>