<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/scrollviewsearch" >
	<LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/linearlayoutbattery" android:layout_width="match_parent" android:layout_height="wrap_content" >
	    <RadioGroup android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/radiogroup_search" >
	        <RadioButton android:layout_width="match_parent" android:layout_height="wrap_content" android:drawableLeft="@drawable/search" android:text="@string/original" android:id="@+id/search_stock" />
	        <RadioButton android:layout_width="match_parent" android:layout_height="wrap_content" android:checked="true" android:drawableLeft="@drawable/xoom_search" android:text="@string/xoom" android:id="@+id/search_xoom" />
	    </RadioGroup>
    	<TextView android:gravity="center_horizontal" android:paddingTop="15dip" android:paddingBottom="5dip" android:layout_width="match_parent" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="#aa33b5e5" android:text="@string/ready" android:id="@+id/ready" />
	    <Button android:layout_width="200dip" android:layout_height="wrap_content" android:padding="10dip" android:background="@drawable/button" android:text="@string/choose" android:id="@+id/search_choose"/>
		<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="100dip" >
	    	<Button android:layout_width="200dip" android:layout_height="40dip" android:padding="10dip" android:background="@drawable/button" android:text="@string/get_search" android:id="@+id/get_search"/>
		</LinearLayout>
	</LinearLayout>
</ScrollView>